--- a/vignettes/include_odg.Rmd
+++ b/vignettes/include_odg.Rmd
@@ -16,6 +16,16 @@ knitr::opts_chunk$set(
 )
 ```
 
+```{r src_doc_info_setup}
+this_rmd <- rprojroot::thisfile()
+s_this_file <- "include_odg.Rmd"
+this_rmd_fun <- rprojroot::is_rstudio_project$make_fix_file()
+rprojroot::find
+this_rmd <- this_rmd_fun(s_this_file)
+cat("This rmd: ", this_rmd, "\n")
+```
+
+
 ## Disclaimer
 This vignette describes the search for and the design for an easy to use functionality to include ODG-Graphics into an rmarkdown document. The ODG-Graphics file is not included directly into the rmd-document, but it is converted into a format such as pdf or png, that can then be used as graphics in an rmd-document.
 
@@ -39,3 +49,58 @@ In HTML documents, graphics are produced in a separate program and are included 
 Depending on the format of output produced from an rmd-document, graphics can be included in one of two ways according to LaTeX or according to HTML. The R-package `knitr` provides the function `include_graphics()` which can be used for both output formats. That is why, we will be using this functionality.  
 
 This package `rmddochelper` has already an existing method of creating an odg-graphic using the function `create_odg_graphic()`. This function is called not from within a document, but outside of the document in a separate R-console (e.g. in RStudio). This function is rather complicated to use, because it offers many parameters. A first approach might very well be to simplify this function. 
+
+
+## Workflow
+An author is writing a document and decides to include a graphic into that document. To be able to do that, this graphic has to be created first. One possibility to do that is to run `rmddochelper::use_odg_graphic` inside an R-code-chunk as shown below
+
+```{r my_first_graphic, eval=FALSE}
+rmddochelper::use_odg_graphic(ps_odg_file = "my_first_graphic.odg")
+```
+
+This call creates and odg-file in the directory where this rmd-file is located. The question is how we can decide the location of this rmd-document. One possibility is to use the `rprojroot` package. The function `thisfile()` returns the absolute path to this rmd-document as shown below.
+
+```{r}
+this_rmd_rprojroot <- rprojroot::thisfile()
+cat("This file is: ", this_rmd, "\n")
+```
+
+But the solution with `rprojroot` works only when the rmd-document is transformed using `knitr` because the determination of the path to the current rmd-source document is based on functionality in `knitr`. Hence when trying to run a chunk inside this document interactively as in a notebook, the solution using `rprojroot` does not work.
+
+
+
+Depending on the parent directory of this rmd-document, we want to place the created odg-graphic in a different place. In case this rmd-source document is placed in a separate subdirectory called `rmd`, we put all odg-graphics under `../odg`. Otherwise, the odg-graphic is just put in a subdirectory called `odg`. 
+
+```{r}
+par_dir <- basename(dirname(this_rmd))
+cat("Parent directory: ", par_dir, "\n")
+# determine odg_dir
+get_odg_dir4this_rmd <- function(ps_this_rmd){
+  # determine parent directory of ps_this_file
+  s_parent_dir <- dirname(ps_this_rmd)
+  s_base_parent_dir <- basename(s_parent_dir)
+  s_odg_parent_dir <- s_parent_dir
+  if (s_base_parent_dir == "rmd") 
+    s_odg_parent_dir <- dirname(s_parent_dir)
+  return(file.path(s_odg_parent_dir, "odg"))
+  
+}
+# output
+cat("Current odg_dir: ", get_odg_dir4this_rmd(ps_this_rmd = this_rmd))
+cat("Test odg_dir: ", get_odg_dir4this_rmd(ps_this_rmd = file.path(dirname(this_rmd), "rmd", basename(this_rmd))))
+```
+
+At this point we are ready to place the created odg-graphic in an automatically determined subdirectory. This subdirectory is determined using the function `get_odg_dir4this_rmd()`. The call to the cration function would then be
+
+```{r my_second_odg, eval=FALSE}
+s_odg_dir <- get_odg_dir4this_rmd(ps_this_rmd = this_rmd)
+s_odg_file <- file.path(s_odg_dir, "my_second_odg.odg")
+rmddochelper::use_odg_graphic(ps_odg_file = s_odg_file)
+```
+
+
+
+
+## List of Source Document Information
+
+
