--- a/vignettes/include_odg.Rmd
+++ b/vignettes/include_odg.Rmd
@@ -20,7 +20,7 @@ knitr::opts_chunk$set(
 this_rmd <- rprojroot::thisfile()
 s_this_file <- "include_odg.Rmd"
 this_rmd_fun <- rprojroot::is_rstudio_project$make_fix_file()
-rprojroot::find
+#rprojroot::find
 this_rmd <- this_rmd_fun(s_this_file)
 cat("This rmd: ", this_rmd, "\n")
 ```
@@ -48,17 +48,22 @@ In HTML documents, graphics are produced in a separate program and are included 
 ## Methods
 Depending on the format of output produced from an rmd-document, graphics can be included in one of two ways according to LaTeX or according to HTML. The R-package `knitr` provides the function `include_graphics()` which can be used for both output formats. That is why, we will be using this functionality.  
 
-This package `rmddochelper` has already an existing method of creating an odg-graphic using the function `create_odg_graphic()`. This function is called not from within a document, but outside of the document in a separate R-console (e.g. in RStudio). This function is rather complicated to use, because it offers many parameters. A first approach might very well be to simplify this function. 
+This package `rmddochelper` has already an existing method of creating an odg-graphic using the function `create_odg_graphic()`. This function is called not from within a document, but outside of the document in a separate R-console (e.g. in RStudio). This function is rather complicated to use, because it offers many parameters. A first approach might very well be to simplify this function. This is postponed to a later point in time, in favor of building a function for a smoother workflow which is described below.
 
 
 ## Workflow
-An author is writing a document and decides to include a graphic into that document. To be able to do that, this graphic has to be created first. One possibility to do that is to run `rmddochelper::use_odg_graphic` inside an R-code-chunk as shown below
+An author is writing a document and decides to include a graphic into that document. To be able to do that, this graphic has to be created first. One possibility to do that is to run a function called `rmddochelper::use_odg_graphic` inside an R-code-chunk as shown below
 
 ```{r my_first_graphic, eval=FALSE}
 rmddochelper::use_odg_graphic(ps_odg_file = "my_first_graphic.odg")
 ```
 
-This call creates and odg-file in the directory where this rmd-file is located. The question is how we can decide the location of this rmd-document. One possibility is to use the `rprojroot` package. The function `thisfile()` returns the absolute path to this rmd-document as shown below.
+When executing this function inside the Rmd-source-file, an odg-file is created in the directory where this rmd-file is located. The above shown function is supposed to work like the `devtools::use_*` class of functions. An important pre-requisite of the shown function is that we have a tool available to create a graphic in an odg-format. One example of such a tool is `LibreOffice draw`. 
+
+
+
+
+The question is how we can decide the location of this rmd-document. One possibility is to use the `rprojroot` package. The function `thisfile()` returns the absolute path to this rmd-document as shown below.
 
 ```{r}
 this_rmd_rprojroot <- rprojroot::thisfile()
