--- a/vignettes/include_odg.Rmd
+++ b/vignettes/include_odg.Rmd
@@ -54,19 +54,28 @@ In the process of writing a document, an author decides to include a diagram, a 
 ### Creation
 The way of creating a graphical object proposed here, uses the notebook-type features of R-code chunks in Rmd-documents when edited with RStudio. These features allow for the execution of a given R-statement inside of a R-code chunk without rendering the whole Rmd-source document. A graphics object can be produced by calling an R-function which might be named `rmddochelper::use_odg_graphic` inside an R-code-chunk such as shown below.
 
-```{r my_first_graphic, echo=FALSE, hook_convert_odg=TRUE, fig_path="."}
-#rmddochelper::use_odg_graphic(ps_path = "my_first_graphic.odg")
-knitr::include_graphics(path = "my_first_graphic.png")
+```{r, echo=FALSE}
+knitr::opts_chunk$set(eval = FALSE)
 ```
 
-When executing this function inside the Rmd-source-file, an odg-file is created in the directory where this rmd-file is located. The above shown function is supposed to work like the `devtools::use_*` class of functions. An important pre-requisite of the shown function is that we have a tool available to create a graphical object in an odg-format. One example of such a tool is `LibreOffice Draw`. 
+```
+ ```{r my_first_graphic}
+ rmddochelper::use_odg_graphic(ps_path = "my_first_graphic.odg")
+ ```
+```
+
+The only important thing here is that the label of the R-code-chunk is the same as the basename of the argument `ps_path` without file-extension. This is later used by the hook-function that will convert the odg-graphics object into the formats that can be included into the document. 
+
+When executing the function `rmddochelper::use_odg_graphic()` inside the R-code-chunk, an odg-file is created in the directory that is specified by the argument `ps_path` . The above shown function is supposed to work like the `devtools::use_*` class of functions. An important pre-requisite of the shown function is that we have a tool available to create a graphical object in an odg-format. One example of such a tool is `LibreOffice Draw`. 
 
 
 ### Inclusion
 In most cases the original version of the graphical object is in a format that cannot directly be included in a document like an Rmd-document. Hence it needs to be converted into a usable format such as `pdf` or `png`. In the case of `odg` graphics produced with `LibreOffice Draw`, we can use the functionality of `LibreOffice` to do the format conversion. After the format conversion, we need to insert the R-code chunk that includes the graphical object into the Rmd-source document. This chunk looks as follows
 
-```{r eval=FALSE}
-knitr::include_graphics(path = "./my_first_graphic.png")
+```
+ ```{r}
+ knitr::include_graphics(path = "./my_first_graphic.png")
+ ```
 ```
 
 In the end this chunk will consist of several parts. One part is the statement that calls the `knitr::include_graphics()` function. This function call gets the converted graphic file as argument. Furthermore, it is required that the chunk label has the same name as the included graphic file without extension. This requirement comes from the automated format conversion. 
@@ -77,9 +86,6 @@ The format conversion is best done in a knitr-hook function. A good reference to
 
 
 ## Old Legacy Stuff below
-```{r}
-knitr::opts_chunk$set(eval = FALSE)
-```
 
 The question is how we can decide the location of this rmd-document. One possibility is to use the `rprojroot` package. The function `thisfile()` returns the absolute path to this rmd-document as shown below.
 
@@ -124,4 +130,4 @@ rmddochelper::use_odg_graphic(ps_odg_file = s_odg_file)
 
 ## List of Source Document Information
 
-   
+     
